use gatsby commands to build and serve

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,9 @@ phases:
   build:
     commands:
       - echo Building...
-      - yarn build
+      - gatsby build
+      - echo Serving...
+      - gatsby serve
 artifacts:
   files:
     - "**/*"
