--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.12",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "axios": "^0.19.2",
     "dayjs": "^1.8.28",
     "font-awesome": "^4.7.0",
@@ -27,7 +31,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "prettier": "2.0.5"
