--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "styled-components": "^5.2.1",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
@@ -57,5 +58,8 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
