--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.7",
     "prettier": "2.0.5"
   },
   "keywords": [
