--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@material-ui/core": "^4.10.2",
-    "@material-ui/icons": "^4.9.1",
     "@types/jest": "^26.0.19",
     "@types/node": "^14.14.12",
     "@types/react": "^17.0.0",
@@ -33,7 +32,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
-    "styled-components": "^5.2.1",
+    "react-loader-spinner": "^4.0.0",
+    "reset-css": "^5.0.1",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
