--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,6 @@
 {
-  "arrowParens": "avoid",
-  "semi": true
+  "arrowParens": "always",
+  "semi": true,
+  "trailingComma": "none",
+  "jsxSingleQuote": true
 }
